Alignment fix

--- a/themes/jeo-theme/assets/scss/6-widgets/_w-video-gallery.scss
+++ b/themes/jeo-theme/assets/scss/6-widgets/_w-video-gallery.scss
@@ -136,6 +136,7 @@
                 p:first-child {
                     margin-top: 0;
                     padding: 8px;
+                    padding-right: 10px;;
                 }
             }
         }
